--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.8.1
 class-registry==2.1.2
 dj-database-url==2.2.0
-Django==5.0.6
+Django==4.1.13
+django-mongoengine==0.5.6
 djangorestframework==3.15.1
+djongo==1.3.6
+dnspython==2.6.1
 filters==1.3.2
 gunicorn==22.0.0
+mongoengine==0.28.2
 packaging==24.0
 psycopg2-binary==2.9.9
+pymongo==3.12.3
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.1
 regex==2024.5.10
 six==1.16.0
-sqlparse==0.5.0
+sqlparse==0.2.4
 typing_extensions==4.12.0
