--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 class-registry==2.1.2
 dj-database-url==2.2.0
 Django==4.1.13
+django-cors-headers==4.4.0
 django-mongoengine==0.5.6
 djangorestframework==3.15.1
 djongo==1.3.6
@@ -10,6 +11,7 @@ filters==1.3.2
 gunicorn==22.0.0
 mongoengine==0.28.2
 packaging==24.0
+pillow==10.4.0
 psycopg2-binary==2.9.9
 pymongo==3.12.3
 python-dateutil==2.9.0.post0
