db changes -- improved security

--- a/SoloBlogger/.env
+++ b/SoloBlogger/.env
@@ -1,4 +1,4 @@
 SECRET_KEY=django-insecure-6y6c+mq6@l03k*llhq&)mf*ide1sc_=sexer7n(ak%5ypp2)m0
 DEBUG=False
-USERNAME=harshofficial995
-PASSWORD=harshofficial995
+USERNAME=avnadmin
+PASSWORD=AVNS_Z6hfYpMVe_PAh_FsYD-
